# hordeRL

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  hordeRL.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: check.yml
components/: __init__.py  announce_game_start.py  appearance.py  coordinates.py  flood_nearby_holes.py  house_structure.py  options.py  population.py  show_debug.py  structure.py  wrath_effect.py
components/abilities/: ability.py  build_fence_ability.py  build_spikes_ability.py  build_wall_ability.py  control_mode_ability.py  dig_hole_ability.py  fast_forward_ability.py  hire_knight_ability.py  look_ability.py  place_bomb_ability.py  place_cow_ability.py  place_haunch_ability.py  plant_sapling_ability.py  sell_ability.py  shoot_ability.py  thwack_ability.py
components/actions/: attack_action.py  eat_action.py
components/actors/: bomb_actor.py  calendar_actor.py
components/animation_effects/: blinker.py  path.py  randomized_blinker.py  step_animation.py
components/attacks/: standard_attack.py
components/base_components/: component.py  entity.py  timed_actor.py
components/brains/: dizzy_brain.py  fast_forward_actor.py  peasant_actor.py  player_brain.py  player_dead_actor.py
components/death_listeners/: npc_corpse.py  on_die_emit_peasant_died.py  player_corpse.py
components/events/: attack_events.py  attack_started_events.py  delete_event.py  die_events.py  new_day_event.py  show_help_dialogue.py  start_game_events.py  step_event.py  terrain_changed_event.py  tree_cut_event.py
components/movement/: drain_on_enter.py  heal_on_dally.py  pickup_gold.py  update_senses_on_move.py
components/pathfinding/: breadcrumb_tracker.py  normal_cost_mapper.py  road_cost_mapper.py
components/season_reset_listeners/: add_farmstead.py  collect_taxes.py  die_in_winter.py  extract_contract_fees.py  move_peasants_out.py  rebuilder.py  seasonal_actor.py  upgrade_houses.py
components/serialization/: load_game.py  save_game.py
components/sound/: battle_music.py
components/tags/: corpse_tag.py  hordeling_tag.py  ice_tag.py  peasant_tag.py  tag.py  town_center_flag.py  water_tag.py
components/weather/: freeze_water.py  weather.py
content/: attacks.py  breadcrumb.py  cows.py  haunch.py  player.py  utilities.py
engine/: README.md  __init__.py  component_manager.py  core.py  game_scene.py  game_scene_controller.py  infos.py  logging.py  message.py  serialization.py  types.py  ui_context.py  utilities.py
examples/: engine_minimal.py
gui/: bars.py  easy_menu.py  fps_counter.py  gui.py  gui_element.py  help_tab.py  labels.py  menus.py  message_box.py  play_window.py  popup_message.py  position_tracker.py
horderl/: AGENTS  __init__.py  config.py  constants.py  i18n.py  palettes.py  settings.py
procgen/: shapes.py  town_names.py
scenes/: defend_scene.py  navigation_menu_scene.py  quit_scene.py
scripts/: check_i18n.sh
systems/: move.py  peasant_dead_check.py  pickup_gold.py  quit.py  utilities.py
(+484 files in other folders)
