[tool.poetry]
name = "oh-no-its-the-horde"
version = "0.1.0"
description = "Oh No! It's THE HORDE is a classic fantasy roguelike with tower defense elements."
authors = ["Aaron Wilson <acwilsoncs@gmail.com>"]
license = "MIT"
packages = [{include = "*"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
altgraph = "0.17.2"
cffi = ">=1.16.0"
dice = "3.1.2"
docopt = "0.6.2"
numpy = "1.21.4"
pycparser = "2.21"
pyparsing = "3.0.6"
six = "1.16.0"
setuptools = "59.4.0"
PyYAML = "6.0.2"
tracery = "0.1.1"
tcod = { version = ">=11.18.0", source = "pypi" }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
horderl = "hordeRL:cli"
